--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"apollo-link-http": "^1.5.14",
 		"apollo-server": "^2.3.1",
 		"dotenv": "^6.2.0",
 		"google-auth-library": "^3.0.1",
