--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
 		"@material-ui/icons": "^3.0.2",
 		"apollo-cache-inmemory": "^1.4.2",
 		"apollo-client": "^2.4.12",
+		"apollo-link-http": "^1.5.14",
 		"apollo-link-ws": "^1.0.12",
 		"axios": "^0.18.0",
 		"date-fns": "^1.30.1",
@@ -34,5 +35,10 @@
 	"eslintConfig": {
 		"extends": "react-app"
 	},
-	"browserslist": [ ">0.2%", "not dead", "not ie <= 11", "not op_mini all" ]
+	"browserslist": [
+		">0.2%",
+		"not dead",
+		"not ie <= 11",
+		"not op_mini all"
+	]
 }
