--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,6 @@
 		"react-beautiful-dnd": "^11.0.0",
 		"react-dom": "^16.8.6",
 		"react-google-login": "^5.0.0",
-		"react-map-gl": "^4.0.9",
 		"react-router-dom": "^4.3.1",
 		"react-scripts": "2.1.3",
 		"styled-components": "^4.2.0",
@@ -35,10 +34,5 @@
 	"eslintConfig": {
 		"extends": "react-app"
 	},
-	"browserslist": [
-		">0.2%",
-		"not dead",
-		"not ie <= 11",
-		"not op_mini all"
-	]
+	"browserslist": [ ">0.2%", "not dead", "not ie <= 11", "not op_mini all" ]
 }
