--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
 		"graphql": "^14.1.1",
 		"graphql-request": "^1.8.2",
 		"graphql-tag": "^2.10.1",
+		"moment": "^2.24.0",
 		"react": "^16.8.6",
 		"react-apollo": "^2.4.0",
 		"react-beautiful-dnd": "^11.0.0",
@@ -34,5 +35,10 @@
 	"eslintConfig": {
 		"extends": "react-app"
 	},
-	"browserslist": [ ">0.2%", "not dead", "not ie <= 11", "not op_mini all" ]
+	"browserslist": [
+		">0.2%",
+		"not dead",
+		"not ie <= 11",
+		"not op_mini all"
+	]
 }
