--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"dotenv": "^6.2.0",
 		"google-auth-library": "^3.0.1",
 		"graphql": "^14.1.1",
+		"jsonwebtoken": "^8.5.1",
 		"lodash": "^4.17.11",
 		"mongoose": "^5.4.6"
 	},
