--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,8 @@
 		"@material-ui/icons": "^3.0.2",
 		"apollo-cache-inmemory": "^1.4.2",
 		"apollo-client": "^2.4.12",
+		"apollo-link-context": "^1.0.17",
+		"apollo-link-error": "^1.1.10",
 		"apollo-link-http": "^1.5.14",
 		"apollo-link-ws": "^1.0.12",
 		"axios": "^0.18.0",
@@ -21,6 +23,7 @@
 		"react-beautiful-dnd": "^11.0.2",
 		"react-dom": "^16.8.6",
 		"react-google-login": "^5.0.0",
+		"react-loading": "^2.0.3",
 		"react-router-dom": "^4.3.1",
 		"react-scripts": "2.1.3",
 		"styled-components": "^4.2.0",
