--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"apollo-link-http": "^1.5.14",
 		"apollo-server": "^2.3.1",
+		"bcrypt": "^3.0.6",
 		"dotenv": "^6.2.0",
 		"google-auth-library": "^3.0.1",
 		"graphql": "^14.1.1",
