--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js",
-		"dev": "nodemon --ignore client/ server.js"
+		"dev": "nodemon --inspect --ignore client/ server.js"
 	},
 	"keywords": [],
 	"author": "",
