--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"graphql": "^14.1.1",
 		"jsonwebtoken": "^8.5.1",
 		"lodash": "^4.17.11",
-		"mongoose": "^5.4.6"
+		"mongoose": "^5.4.6",
+		"node-localstorage": "^1.3.1"
 	},
 	"devDependencies": {
 		"nodemon": "^1.18.10"
